--- a/BooKtebi/src/index.html
+++ b/BooKtebi/src/index.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
