--- a/BooKtebi/src/index.html
+++ b/BooKtebi/src/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>BooKtebi</title>
+    <meta name="description" content="Booktebi est un site pour la vente des livres en ligne, 
+                                      vous pouvez trouver plusieurs livres sous différents formats,
+                                      de plus on assure une livraison rapîde ">
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
